# pdc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  notes.md
dev_docs/: Doxyfile
scripts/: compile.sh  gdb_commands.sh  nsys_cuda_profile.sh  nsys_profile.sh  run.sh
src/: CMakeLists.txt  tags
src/api/: CMakeLists.txt  pdc.c  pdc_client_connect.c
src/api/include/: pdc.h  pdc_client_connect.h  pdc_public.h
src/api/my_rpc/: my_rpc.c
src/api/my_rpc/include/: my_rpc.h
src/api/pdc_analysis/: pdc_analysis.c  pdc_analysis_and_transforms_connect.c  pdc_analysis_common.c
src/api/pdc_analysis/include/: pdc_analysis_and_transforms.h  pdc_analysis_and_transforms_common.h  pdc_analysis_pkg.h
src/api/pdc_obj/: pdc_obj.c  pdc_prop.c
src/api/pdc_obj/include/: pdc_obj.h  pdc_prop_pkg.h
src/api/pdc_persist/: pdc_persist.c
src/api/pdc_persist/include/: pdc_persist.h
src/api/pdc_region/: pdc_region.c  pdc_region_transfer.c
src/api/pdc_region/include/: pdc_region.h
src/api/pdc_transform/: pdc_transform.c
src/api/pdc_transform/include/: pdc_transform.h
src/api/pdc_transform_old/: pdc_transform_old.c  pdc_transforms_common_old.c
src/api/pdc_transform_old/include/: pdc_transform_old.h  pdc_transforms_pkg_old.h
src/plugins/: CMakeLists.txt  plugin_cusz.cu  plugin_entropy.cu  plugin_helper.h  plugin_sz.cc  plugin_test.cc  server_plugin_test.cc
src/server/: CMakeLists.txt  pdc_client_server_common.c  pdc_hash-table.c  pdc_server.c  pdc_server.h  pdc_server_metadata.c
src/server/include/: pdc_client_server_common.h  pdc_server_common.h
src/server/my_server_rpc/: my_server_rpc.c
src/server/my_server_rpc/include/: my_server_rpc.h
src/server/pdc_compute/: pdc_compute.c
src/server/pdc_monitor/: cpu_monitor.c
src/server/pdc_monitor/include/: cpu_monitor.h
src/server/pdc_server_analysis/: pdc_server_analysis.c
src/server/pdc_server_persist/: pdc_server_persist.c
src/server/pdc_server_persist/include/: pdc_server_persist.h
src/server/pdc_server_region/: pdc_server_data.c  pdc_server_region_cache.c  pdc_server_region_transfer.c
src/server/pdc_server_region/include/: pdc_server_data.h  pdc_server_region_cache.h  pdc_server_region_transfer.h
src/server/pdc_server_transform/: pdc_server_transform.c
src/server/pdc_server_transform/include/: pdc_server_transform.h
src/tests/: CMakeLists.txt  direct_transform.cc  init_pdc_gpu.cu  kvtag_add_get.c  kvtag_add_get_scale.c  nyx_sdrbench.cc  obj_analysis.cc  obj_analysis_old2.c  obj_transform.cc  obj_transformation_old.c  obj_type_transform.cc  obj_type_transform_old.c  pdc_transforms_lib.c  query_data.c  sdrbench_hurricane_isabel.cc  sdrbench_hurricane_isabel_full.cc  sdrbench_s3d.cc  sdrbench_s3d_full.cc  vpicio_compress.cc  vpicio_compress_obj.cc  vpicio_compress_obj_gpu.cu  vpicio_compress_obj_server.cc  vpicio_persist.cc  vpicio_v2.c
src/utils/: pdc_interface.c  pdc_utils.c  rpc_engine.c  symbols.c  symbols.h
src/utils/include/: pdc_id_pkg.h  pdc_interface.h  pdc_private.h  pdc_utils.h  rpc_engine.h
tools/: CMakeLists.txt  pdc_import.c  pdc_ls.c
